--- a/content/_fr/contact.html
+++ b/content/_fr/contact.html
@@ -1,15 +1,30 @@
 ---
 title: contact
 ---
-<div style='text-align: center'>
-    <p>jacopo.grecodalceo [at] gmail.com</p>
-    <a href='https://instagram.com/{{ site.instagram_username }}' title='instagram' target="_blank">instagram.com/{{ site.instagram_username }}</a>
-    <br>
-    <a href='https://vimeo.com/{{ site.vimeo_username }}' title='vimeo' target="_blank">vimeo.com/jacopogrecodalceo</a>
-    <br>
-    <br>
-    <a href='{{ site.baseurl }}/assets/images/jacopo_grecodalceo.png'><img src='{{ site.baseurl }}/assets/images/jacopo_grecodalceo.png' width=35% ></a>
-    <div style="width: 35%; margin: 0 auto; text-align: right">
-        <small>@ Axel Poulsen</small>
-    </div>
+
+<div style="text-align: center">
+  <p>jacopo.grecodalceo [at] gmail.com</p>
+  <a
+    href="https://instagram.com/{{ site.instagram_username }}"
+    title="instagram"
+    target="_blank"
+    >instagram.com/{{ site.instagram_username }}</a
+  >
+  <br />
+  <a
+    href="https://vimeo.com/{{ site.vimeo_username }}"
+    title="vimeo"
+    target="_blank"
+    >vimeo.com/jacopogrecodalceo</a
+  >
+  <br />
+  <br />
+  <a href="{{ site.baseurl }}/assets/images/jacopo_grecodalceo.png"
+    ><img
+      src="{{ site.baseurl }}/assets/images/jacopo_grecodalceo.png"
+      width="35%"
+  /></a>
+  <div style="width: 35%; margin: 0 auto; text-align: right">
+    <small>@ Axel Poulsen</small>
+  </div>
 </div>
