--- a/content/_fr/index.html
+++ b/content/_fr/index.html
@@ -1,10 +1,16 @@
 ---
 title: home
 ---
+
 <div>
   {% for project in site[page.collection] reversed %}
     {% if project.path contains 'chiedimi' %}
-      <a href="{{ project.url | prepend: site.base_url }}"><img class="index-img" alt="{{ project.title }}" src="{{ site.baseurl }}/assets/images/{{ project.slug }}.png"></a>
+      <a href="{{ project.url | prepend: site.url }}"
+        ><img
+          class="index-img"
+          alt="{{ project.title }}"
+          src="{{ site.url }}/assets/images/{{ project.slug }}.png"/>
+      </a>
     {% endif %}
   {% endfor %}
 </div>
