--- a/content/_en/dates.html
+++ b/content/_en/dates.html
@@ -3,10 +3,12 @@ title: dates
 ---
 
 {% capture now %}{{'now' | date: '%s' | plus: 0 }}{% endcapture %}
+{% assign sorted_dates = site.data.dates | sort: 'when' %}
+
 
 <div>
     <h3>{{ site.data.translations.upcoming[page.collection] }}</h3>
-    {% for d in site.data.dates %}
+    {% for d in sorted_dates reversed %}
 
         {% for piece in site[page.collection] %}
             {% if d.what == piece.title %}
@@ -14,16 +16,18 @@ title: dates
             {% endif %}
         {% endfor %}
 
-        {% capture date %}{{d.when | date: '%s' | plus: 0 }}{% endcapture %}
+        {% capture date %}{{ d.when | date: '%s' | plus: 0 }}{% endcapture %}
         {% if date >= now %}
                 {{ d.when }}, <a href="{{ p_url }}" > <b>{{ d.what }}</b></a>, <a href="{{ d.site }}" target="_blank"> {{ d.name }}</a>, <a href="{{ d.maps }}" target="_blank"> <i>{{ d.where }}</i></a>, {{ d.city }} ({{ d.country }})<br>
         {% endif %}
     {% endfor %}
 </div>
----
+
+<hr>
+
 <div>
     <h3>{{ site.data.translations.past[page.collection] }}</h3>
-    {% for d in site.data.dates %}
+    {% for d in sorted_dates reversed %}
 
         {% for piece in site[page.collection] %}
             {% if d.what == piece.title %}
@@ -31,7 +35,7 @@ title: dates
             {% endif %}
         {% endfor %}
 
-        {% capture date %}{{d.when | date: '%s' | plus: 0 }}{% endcapture %}
+        {% capture date %}{{ d.when | date: '%s' | plus: 0 }}{% endcapture %}
         {% if date < now %}
             {{ d.when }}, <a href="{{ p_url }}" > <b>{{ d.what }}</b></a>, <a href="{{ d.site }}" target="_blank"> {{ d.name }}</a>, <a href="{{ d.maps }}" target="_blank"> <i>{{ d.where }}</i></a>, {{ d.city }} ({{ d.country }})<br>
         {% endif %}
